# pepo

./: .env.development  .env.production  .env.secrets  .eslintrc.cjs  .gitignore  .gitmodules  .prettierrc  Cargo.toml  Dockerfile  Makefile  README.md  SUMRY.md  TODO.md  components.json  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tailwind.config.ts  vite.config.js  vitest.config.ts
.github/workflows/: publish-release-branch.yml  publish-release.yml  test-on-push.yml  test.yml
archive/: 202511221323.SUMRY.md  202512051121.SUMRY.md  202601061203.SUMRY.md  202604111245.SUMRY.md  202604111306.SUMRY.md  202604111537.SUMRY.md  202604111541.SUMRY.md  202604111924.SUMRY.md  202604121221.SUMRY.md  202604131742.SUMRY.md  202605032046.SUMRY.md  202605310857.SUMRY.md  202606101730.SUMRY.md
internal/: README.md  verify.sh
internal/frontend/: InternalRoot.svelte  bindings.ts  index.ts
internal/rust/: Cargo.toml
internal/rust/src/: lib.rs
scripts/: changelog.sh  patch.sh  secrets.sh  version.sh
scripts/sumry/: go.mod  go.sum  main.go
scripts/vergo/: go.mod  go.sum  main.go
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/examples/: gen_bindings.rs
src-tauri/icons/: icon.icns
src-tauri/src/: badgemanager.rs  badgepersist.rs  emotemanager.rs  eventsub.rs  internal.rs  lib.rs  logging.rs  main.rs  message.rs  token.rs  types.rs
src-tauri/src/emote/: cache.rs  mod.rs  persist.rs
src-tauri/src/emote/providers/: bttv.rs  ffz.rs  http.rs  mod.rs  seventv.rs  twitch.rs
src-tauri/src/include/: mod.rs
src/lib/: auth.test.ts  auth.ts  bindings.ts  settings.test.ts  settings.ts  tauri.ts  utils.ts
src/lib/chat/: autoscroll.test.ts  autoscroll.ts  badge-tooltip.ts  cache.ts  channel-header.test.ts  channel-header.ts  client.ts  colon-macro.test.ts  colon-macro.ts  message-layout.test.ts  message-layout.ts  translation.test.ts  translation.ts  twitch.ts
src/lib/components/: +inputnav.svelte  +nav.svelte  +tabs.svelte  app-sidebar.svelte  nav-user.svelte  search-form.svelte
src/lib/components/chat/: +badge.svelte  +badges.svelte  +chat.svelte  +emote-picker.svelte  +emote-tooltip.svelte  +emote.svelte  +translation.svelte
src/lib/components/ui/avatar/: avatar-fallback.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/button-group/: button-group-separator.svelte
src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-content.svelte  dropdown-menu-item.svelte  dropdown-menu-radio-item.svelte  dropdown-menu-sub-content.svelte  dropdown-menu-sub-trigger.svelte
src/lib/components/ui/input/: input.svelte
src/lib/components/ui/separator/: separator.svelte
src/lib/components/ui/sheet/: sheet-content.svelte
src/lib/components/ui/sidebar/: sidebar-content.svelte  sidebar-footer.svelte  sidebar-group-action.svelte  sidebar-group-content.svelte  sidebar-group-label.svelte  sidebar-group.svelte  sidebar-input.svelte  sidebar-inset.svelte  sidebar-menu-action.svelte  sidebar-menu-button.svelte  sidebar-menu-item.svelte  sidebar-menu-skeleton.svelte  sidebar-menu.svelte  sidebar-provider.svelte  sidebar-rail.svelte  sidebar-trigger.svelte  sidebar.svelte
src/lib/components/ui/sonner/: sonner.svelte
src/lib/components/ui/tooltip/: index.ts  tooltip-content.svelte
src/lib/config/: constants.ts
src/lib/hooks/: is-mobile.svelte.ts
src/lib/internal/: index.ts
src/lib/logger/: log.ts
src/lib/parsers/: parser.ts  twitch.ts
src/lib/resources/: brand-icon.svelte  broadcaster.svelte  kick.svelte  moderator.svelte  partner.svelte  sub.svelte  twitch.svelte  vip.svelte  youtube.svelte
src/lib/store/: badges.ts  channels.ts  chat.ts  emotes.ts  token.ts  user.ts  writeable.ts
src/lib/store/emotes/: bttv.ts  emote.ts  ffz.ts  helix.ts  seventv.ts
src/lib/store/runes/: apiclient.svelte.ts  token.svelte.ts  user.svelte.ts
src/lib/stores/: auth.svelte.ts  settings.svelte.ts
src/lib/twitch/: message.ts
src/lib/types/: twitch.ts
src/lib/util/: constants.ts  twitch.ts
src/resources/: broadcaster.svelte  hide.svelte  moderator.svelte  partner.svelte  show.svelte  sub.svelte  vip.svelte
src/routes/: +layout.js  +layout.svelte  +layout.ts  +page.svelte  index.svelte
src/routes/[channel]/: +page.svelte
src/routes/app/: +layout.svelte
src/routes/app/chat/[id]/: +page.svelte
src/routes/chat/: +layout.svelte
src/routes/chat/[channel]/: +page.svelte
src/routes/chat/[id]/: +page.svelte
src/routes/login/: +page.svelte
src/routes/settings/: +page.svelte
